archive/pulsar/cluster/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pulsar-tcp-ingressroute
  namespace: pulsar
spec:
  entryPoints:
    - pulsar 
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pulsar
          port: 6650
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pulsar-http-ingressroute
  namespace: pulsar
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pulsar.mw.local`)
      kind: Rule
      services:
        - name: pulsar
          port: 80
